# epic-flow-cuda

./: .gitignore  CMakeLists.txt  Makefile  cars-flow.flo  cars10-edge  cars10-match  cars10.flo  cuda-solver.cu  ef.out  epicflow-static  epicflow.cpp  image.c  image.h  io.c  nvprof.csv  run_aee.py  run_all.py  run_all.sh  run_frame_vid.py  run_merge_movie.sh  run_movie_maker.sh  solver.cpp  test  test_cuda.cu  utils.h  variational.cpp  variational.cu  variational.h  viz.py
report/: report.aux  report.bbl  report.bib  report.blg  report.dvi  report.out  report.run.xml  report.tex  report.top  result_LR-test.csv  result_LR-training.csv  result_RF-test.csv  result_RF-training.csv  result_SVC-training.csv  result_accuracy.csv  result_ensemble.csv  result_log_loss.csv  table_1_data.csv  table_2_match_data.csv  table_3_team_data.csv  table_game-by-game.csv
result/: compute-time.csv  time-16-16-gpu.csv  time-16-2-gpu.csv  time-16-32-gpu.csv  time-16-4-gpu.csv  time-16-8-gpu-paged.csv  time-16-8-gpu.csv  time-32-16-gpu.csv  time-32-2-gpu.csv  time-32-32-gpu.csv  time-32-4-gpu.csv  time-32-8-gpu.csv  time-64-16-gpu.csv  time-64-2-gpu.csv  time-64-32-gpu.csv  time-64-4-gpu.csv  time-64-8-gpu.csv  time-8-16-gpu.csv  time-8-2-gpu.csv  time-8-32-gpu.csv  time-8-4-gpu.csv  time-8-8-gpu.csv  time-cpu-slow.csv  time-cpu.csv  time-gpu.csv  time.csv
xcode/: CMakeCache.txt  cmake_install.cmake
xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel  epic_flow_cmakeRulesBuildPhase.makeRelWithDebInfo
(+28 files in other folders)
